After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645347 - doesn't like it when faces aren't available
doesn't like it when faces aren't available
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
git master
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-20 23:55 UTC by William Jon McCann
Modified: 2011-03-21 00:26 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description William Jon McCann 2011-03-20 23:55:40 UTC
(gnome-control-center:28627): user-accounts-cc-panel-WARNING **: Failed to load faces: Error opening directory '/opt/gnome/share/pixmaps/faces': No such file or directory
(gnome-control-center:28627): user-accounts-cc-panel-DEBUG: Got 3 users

(gnome-control-center:28627): user-accounts-cc-panel-DEBUG: adding user Jon McCann

(gnome-control-center:28627): user-accounts-cc-panel-DEBUG: user added: 500 Jon McCann

(gnome-control-center:28627): user-accounts-cc-panel-DEBUG: File does not exist


These are installed by GDM currently.  Maybe it makes sense to put them somewhere else.  The don't have much to do with GDM anymore.
Comment 1 Bastien Nocera 2011-03-21 00:17:31 UTC
Doesn't warn any more.
Comment 2 William Jon McCann 2011-03-21 00:20:56 UTC
Right but I still think we should move them.  They don't make any sense in GDM anymore.
Comment 3 Bastien Nocera 2011-03-21 00:26:59 UTC
True, mind filing a bug against GDM about that? Where should we add them then?