user-accounts: Don't warn if there are no faces pixmaps

https://bugzilla.gnome.org/show_bug.cgi?id=645347